--- a/style.css
+++ b/style.css
@@ -13,11 +13,21 @@ body {
     font-size: 15px;
 
 }
-.notebook {
-    display: flex;
+.note_style {
+    background-color: aqua;
+    width: 1100px;
+    height: 830px;
+    padding-left: 40px;
 
+}
+.note_style:hover {
+    transform: scale(1.07);
+    transition: 0.5s;
 }
 h1 {
     display: flex;
     justify-content: center;
+}
+li {
+    list-style-type: none;
 }
